backend-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  namespace: yo-development
  labels:
    app: backend-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5000"
    prometheus.io/path: "/metrics"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: backend-app
      containers:
        - name: backend-app
          image: yogesh1924/backend:v10
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
