backend-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app
  namespace: yo-development
  labels:
    app: backend-app
spec:
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  internalTrafficPolicy: Cluster
