backend-app/authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: backend-app
  namespace: yo-development
spec:
  selector:
    matchLabels:
      app: backend-app
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/yo-istio-ingress/sa/istio-ingressgateway
              - cluster.local/ns/yo-development/sa/frontend-app
